<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="calc_ini_txt"></string>
    <string name="calc_zero">0</string>
    <string name="calc_one">1</string>
    <string name="calc_two">2</string>
    <string name="calc_three">3</string>
    <string name="calc_four">4</string>
    <string name="calc_five">5</string>
    <string name="calc_six">6</string>
    <string name="calc_seven">7</string>
    <string name="calc_eight">8</string>
    <string name="calc_nine">9</string>
    <string name="calc_divide">/</string>
    <string name="calc_multiply">*</string>
    <string name="calc_subtract">-</string>
    <string name="calc_add">+</string>
    <string name="calc_equal">=</string>
    <string name="calc_dotDecimal">.</string>
    <string name="calc_backspace">BACK</string>
    <string name="calc_clear_screen">CLR</string>

</resources>